--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "check-package-version": "^1.0.3",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
@@ -81,12 +80,11 @@
     "axios": "^0.21.0",
     "blueimp-md5": "^2.18.0",
     "chromedriver": "^92.0.2",
-    "doublekit-core-ui": "^1.0.1",
+    "doublekit-core-ui": "^1.0.0",
+    "doublekit-eam-ui": "^1.0.0",
     "doublekit-licence-ui": "^1.0.1",
     "doublekit-message-ui": "^1.0.0",
-    "doublekit-plugin-manage": "^1.0.0",
     "doublekit-plugin-ui": "^1.0.0",
-    "doublekit-portal-ui": "^1.0.0",
     "doublekit-privilege-ui": "^1.0.0",
     "doublekit-user-ui": "^1.0.0",
     "i18next": "^19.8.4",
