--- a/.babelrc
+++ b/.babelrc
@@ -22,11 +22,43 @@
             "libraryDirectory": "es",
             "style": "css"
         }],
+
         ["import", {
             "libraryName": "doublekit-eam-ui",
             "libraryDirectory": "es",
-            "style": "scss"
+            "style": true
         },"doublekit-eam-ui"],
+
+        ["import", {
+            "libraryName": " doublekit-plugin-ui",
+            "libraryDirectory": "es",
+            "style":  true
+        }," doublekit-plugin-ui"],
+
+        ["import", {
+            "libraryName": "doublekit-privilege-ui",
+            "libraryDirectory": "es",
+            "style":  true
+        },"doublekit-privilege-ui"],
+
+        ["import", {
+            "libraryName": "doublekit-user-ui",
+            "libraryDirectory": "es",
+            "style":  true
+        },"doublekit-user-ui"],
+
+        ["import", {
+            "libraryName": "doublekit-licence-ui",
+            "libraryDirectory": "es",
+            "style":  true
+        },"doublekit-licence-ui"],
+
+        ["import", {
+            "libraryName": "doublekit-message-ui",
+            "libraryDirectory": "es",
+            "style":  true
+        },"doublekit-message-ui"],
+
         ["@babel/plugin-proposal-decorators", { "legacy": true }],
         ["@babel/plugin-proposal-class-properties", { "loose" : false }],
         ["dynamic-import-webpack"],
