--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "doublekit-jtest-ui",
+  "name": "tiklab-teston-ui",
   "version": "1.0.0",
-  "description": "doublekit-jtest-ui",
+  "description": "tiklab-teston-ui",
   "main": "es/index.js",
   "files": [
     "es"
@@ -80,13 +80,13 @@
     "axios": "^0.21.0",
     "blueimp-md5": "^2.18.0",
     "chromedriver": "^92.0.2",
-    "doublekit-core-ui": "^1.0.0",
-    "doublekit-eam-ui": "^1.0.0",
-    "doublekit-licence-ui": "^1.0.0",
-    "doublekit-message-ui": "^1.0.0",
-    "doublekit-plugin-ui": "^1.0.0",
-    "doublekit-privilege-ui": "^1.0.0",
-    "doublekit-user-ui": "^1.0.0",
+    "tiklab-core-ui": "^1.0.0",
+    "tiklab-eam-ui": "^1.0.0",
+    "tiklab-licence-ui": "^1.0.0",
+    "tiklab-message-ui": "^1.0.0",
+    "tiklab-plugin-ui": "^1.0.0",
+    "tiklab-privilege-ui": "^1.0.0",
+    "tiklab-user-ui": "^1.0.0",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "json-server": "^0.16.3",
