--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "sass": "^1.32.2",
     "tiklab-core-ui": "^1.0.0",
     "tiklab-eam-ui": "^1.0.0",
+    "tiklab-enable-axios-ce": "^1.0.0",
     "tiklab-licence-ui": "^1.0.0",
     "tiklab-message-ui": "^1.0.0",
     "tiklab-plugin-ui": "^1.0.0",
