--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "start": "cross-env NODE_ENV=local API_ENV=local  webpack-dev-server --progress --config ./webpack.dev.js ",
-    "dev": "cross-env NODE_ENV=dev API_ENV=dev webpack-dev-server --progress --config ./webpack.dev.js",
-    "prd": "cross-env NODE_ENV=prod API_ENV=prod webpack --config ./webpack.test.js",
+    "start-acc": "cross-env NODE_ENV=local API_ENV=local-acc  webpack-dev-server --progress --config ./webpack.dev.js ",
+    "prod": "cross-env NODE_ENV=prod API_ENV=prod webpack --config ./webpack.test.js",
     "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files  --extensions .js --out-dir es/components && ncp pack/index.js es/index.js && ncp README.md es/README.md",
     "build:dk": " webpack --config ./webpack.dk.js"
   },
@@ -32,27 +32,27 @@
     "@babel/plugin-transform-react-jsx": "^7.12.5",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.7.4",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.12.1",
     "@babel/runtime": "^7.12.5",
     "@hot-loader/react-dom": "^17.0.0",
-    "autoprefixer": "^10.0.2",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-env": "^1.7.0",
+    "check-package-version": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
-    "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "i18next-http-backend": "^1.0.21",
     "mini-css-extract-plugin": "^1.3.1",
     "mockjs": "^1.1.0",
-    "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.1.7",
@@ -63,6 +63,7 @@
     "react-hot-loader": "^4.13.0",
     "react-router-config": "^5.1.1",
     "sass-loader": "^10.1.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^1.4.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -102,8 +103,10 @@
     "tiklab-enable-axios-ce": "^1.0.0",
     "tiklab-licence-ui": "^1.0.0",
     "tiklab-message-ui": "^1.0.0",
+    "tiklab-oplog-ui": "^1.0.0",
     "tiklab-plugin-ui": "^1.0.0",
     "tiklab-privilege-ui": "^1.0.0",
+    "tiklab-todotask-ui": "^1.0.0",
     "tiklab-user-ui": "^1.0.0",
     "uuid": "^8.3.2"
   }
