--- a/package.json
+++ b/package.json
@@ -89,12 +89,15 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "moment": "^2.29.1",
+    "monaco-editor": "^0.30.1",
+    "monaco-editor-webpack-plugin": "^6.0.0",
     "ncp": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-editext": "^5.0.2",
     "react-i18next": "^11.7.3",
     "react-json-view": "^1.21.3",
+    "react-monaco-editor": "^0.51.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass": "^1.32.2",
