优化,组件接入

--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "tiklab-message-ui": "^1.0.1",
     "tiklab-plugin-core-ui": "^1.0.1",
     "tiklab-plugin-manager-ui": "^1.0.1",
+    "tiklab-privilege-ui": "^1.0.1",
     "tiklab-security-ui": "^1.0.1",
     "tiklab-user-ui": "^1.0.1",
     "uuid": "^8.3.2"
