--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "echarts": "^5.3.3",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
+    "js-beautify": "^1.14.9",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
     "mobx": "^5.15.4",
