--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "tiklab-plugin-manager-ui": "^1.0.1",
     "tiklab-privilege-ui": "^1.0.1",
     "tiklab-security-ui": "^1.0.1",
+    "tiklab-todotask-ui": "^1.0.1",
     "tiklab-user-ui": "^1.0.1",
     "uuid": "^8.3.2"
   }
