--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "monaco-editor-webpack-plugin": "^6.0.0",
     "ncp": "^2.0.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.1",
     "react-editext": "^5.0.2",
     "react-i18next": "^11.7.3",
