--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development API_ENV=local  webpack-dev-server --progress --config ./webpack.dev.js ",
     "prod": "cross-env NODE_ENV=production API_ENV=prod webpack --config webpack.prd.js",
-    "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files  --extensions .js --out-dir es/components && ncp README.md es/README.md",
+    "build": "rimraf es/* && ./node_modules/.bin/babel src --copy-files  --extensions .js --out-dir es/module && ncp ./src/ui.js es/index.js && ncp README.md es/README.md",
     "build:dk": " webpack --config ./webpack.dk.js"
   },
   "keywords": [],
